Use overflow: auto to prevent large images from breaking layout when taking quiz on mobile

--- a/client/styles/takeQuiz.less
+++ b/client/styles/takeQuiz.less
@@ -39,6 +39,7 @@
             margin-bottom: 2em;
             max-width: @max-question-width;
             line-height: 1.6;
+            overflow: auto;
         }
 
         .submission {
